statum-macros/tests/ui/invalid_validators_no_methods.stderr
error: Error: `#[validators(TaskMachine)]` on `impl DbRow` must define at least one validator method.
       Expected one method per `TaskState` variant: is_draft.
  --> tests/ui/invalid_validators_no_methods.rs:29:1
   |
29 | #[validators(TaskMachine)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `__statum_emit_task_machine_validator_no_methods` which comes from the expansion of the attribute macro `validators` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/invalid_validators_no_methods.rs:30:14
   |
30 | impl DbRow {}
   |              ^ consider adding a `main` function to `$DIR/tests/ui/invalid_validators_no_methods.rs`

warning: unused variable: `name`
  --> tests/ui/invalid_validators_no_methods.rs:20:1
   |
20 | #[machine]
   | ^^^^^^^^^^
...
29 | #[validators(TaskMachine)]
   | -------------------------- in this attribute macro expansion
   |
help: `name` is captured in macro and introduced a unused variable
  --> tests/ui/invalid_validators_no_methods.rs:20:1
   |
20 | #[machine]
   | ^^^^^^^^^^
...
29 | #[validators(TaskMachine)]
   | -------------------------- in this attribute macro expansion
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default
   = note: this warning originates in the macro `__statum_expand_task_machine_validators` which comes from the expansion of the attribute macro `validators` (in Nightly builds, run with -Z macro-backtrace for more info)
